examples/good/02-Concatenation.tms
void main () {
  
  string x = "xxx";
  string y = "yyy";

  string xzy = x +++ "zzz" +++ y;

  printString(xzy);
  printBool(xzy == "xxxzzzyyy");

  return;
}