examples/bad/00-BadHello.tms
void main () {
  printString("hello worl"d);
  return;
}